fix pading on mobile version

--- a/src/sass/components/homepage/_contacts-home.scss
+++ b/src/sass/components/homepage/_contacts-home.scss
@@ -4,7 +4,7 @@ address {
 
 .contacts.container {
   max-width: 414px;
-  padding: 0 15px;
+  padding: 36px 15px 32px 15px;
 
   @media screen and (min-width: $tablet) {
     max-width: 1024px;
@@ -18,9 +18,6 @@ address {
 }
 
 .contacts {
-  padding-top: 36px;
-  padding-bottom: 32px;
-
   background-color: #fffdee;
 }
 
